--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test</title>
+  <title>Bear Watcher</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div class="page-container" id="pageContainer">
+    <div class="card-container" id="cardContainer"></div>
+    <div class="form-container" id="formContainer"></div>
+  </div>
 </body>
 </html>
