--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Bear Watcher</title>
 </head>
 <body>
+  <div class="header" id="header"><p>BEAR WATCHER</p></div>
   <div class="page-container" id="pageContainer">
     <div class="card-container" id="cardContainer"></div>
     <div class="form-container" id="formContainer"></div>
